# PaperRAG

./: .gitignore  .gitigore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  EVALUATION_TEMPLATE.md  EXPERIMENT_LOGGING_SCHEMA.md  LICENSE  QUICK_REFERENCE.md  README.md  evaluate_paper.py  prompt.md  pyproject.toml
bak/: OPTIMIZATION_SUMMARY.md
docs/: api.md  architecture.md  cli.md  conf.py  configuration.md  getting-started.md  index.md  usage.md
finetune/: README.md  finetune_embedder.py  finetune_llm.py  prepare_embedder_data.py  prepare_llm_data.py  requirements.txt
paper_rag/: chunker.py  cli.py  config.py  embedder.py  llm.py  parallel.py  parser.py  repl.py  retriever.py  vectorstore.py
paper_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper_rag/my_index/: config_snapshot.json  faiss.index  file_hashes.json  metadata.json  version.json
paperrag/: __init__.py  chunker.py  cli.py  config.py  embedder.py  export.py  llm.py  llm_benchmark.py  parallel.py  parser.py  repl.py  retriever.py  sample_questions.jsonl  vectorstore.py
scripts/: show_failed_pdfs.py  show_index_stats.py  test_index_dir_optional.py  test_llm_calls.py  verify_real_indexing.py
test_index/: config_snapshot.json  faiss.index  file_hashes.json  metadata.json  version.json
tests/: test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_llm.py  test_optimizations.py  test_parser.py  test_thinking_model.py  test_vectorstore.py  test_version.py
