[project]
name = "paperrag"
version = "0.2.0"
description = "Local RAG for academic PDFs"
authors = [{name = "PaperRAG Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling",
    "sentence-transformers",
    "faiss-cpu",
    "torch",
    "numpy",
    "pydantic>=2.5,<3.0",
    "typer>=0.9",
    "rich>=13.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0,<2.0",
    "psutil>=5.9",
    "pymupdf>=1.23",  # For PDF text detection
    "prompt-toolkit>=3.0",  # For REPL command history
    "openai>=1.0,<2.0",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.38",
    "accelerate>=0.27",
]
test = [
    "pytest>=8.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "furo",
]

[project.scripts]
paperrag = "paperrag.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["paperrag"]

