[project]
name = "paperrag"
version = "0.4.3"
description = "Local RAG for academic PDFs"
authors = [{name = "PaperRAG Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling",
    "sentence-transformers",
    "faiss-cpu",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "numpy",
    "pydantic>=2.5,<3.0",
    "typer>=0.9",
    "rich>=13.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0,<2.0",
    "psutil>=5.9",
    "pymupdf>=1.23",  # For PDF text detection
    "prompt-toolkit>=3.0",  # For REPL command history
    "openai>=1.0,<2.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.38",
    "accelerate>=0.27",
]
llama = [
    "huggingface-hub>=0.20",  # For downloading GGUF models from HuggingFace
]
test = [
    "pytest>=8.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "furo",
]

[project.scripts]
paperrag = "paperrag.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["paperrag"]

[tool.pytest.ini_options]
# Filter out known third-party warnings from SWIG/Faiss
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

# CPU-only torch is the default (avoids CUDA downloads during `uv sync`).
# A `gpu` extra would require torch to move out of the default dependencies
# into mutually-exclusive CPU/GPU extras, which would break plain `uv sync`.
# GPU users can reinstall torch from their preferred CUDA index explicitly.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
